--- a/src/layout/about.css
+++ b/src/layout/about.css
@@ -6,7 +6,7 @@
 }
 
 .AboutConteiner{
-    padding: 0 calc((62vw - 1000px) / 2 );
+    padding: 0 calc((72vw - 1000px) / 2 );
     margin: 0;
 }
 
@@ -21,21 +21,40 @@
 .AboutImegeContener{
     display: flex;
     align-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+    /* flex-direction: row; */
+    /* flex-wrap: wrap; */
     justify-content: space-between;
     margin: 4vh 1.8vh 6vh 1.8vh;
 }
 
+
 .AboutPage{
     font-size: 2.4vh;
     text-align: justify;
-    margin: 0;
+    margin: 0 0 0 2vh;
+    width: 60%;
     /* margin-top: 1vh; */
 }
 
 .AboutPic{
+    height: 43vh;
+    width: 40%;
+    object-fit: cover;
     margin: 0;
     border-radius: 2vh;
+    box-shadow: 0px 0.51vh 1.55vh 0.2vh #223c5033;
 }
 
+@media(max-width: 1025px){
+    .AboutImegeContener{
+        flex-direction: column;
+    }
+    .AboutPage{
+        margin: 1vh 0 0 0vh;
+        width: 100%;
+    }
+    
+    .AboutPic{
+        width: 100%;
+    }
+}
